add common Project

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,11 +1,11 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 20
     buildToolsVersion "20.0.0"
 
     defaultConfig {
-        applicationId "com.operamdo.appmanager"
+        applicationId "com.operando.appmanager.common"
         minSdkVersion 14
         targetSdkVersion 20
         versionCode 1
@@ -21,9 +21,4 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    wearApp project(':wear')
-    compile project(':common')
-    compile 'com.google.android.gms:play-services-wearable:+'
-    compile 'com.jakewharton:butterknife:5.1.1'
-    provided 'org.projectlombok:lombok:1.12.6'
 }
