--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     compile project(':common')
     compile 'com.google.android.support:wearable:+'
     compile 'com.google.android.gms:play-services-wearable:+'
+    compile 'com.jakewharton:butterknife:5.1.1'
 }
