--- a/common/build.gradle
+++ b/common/build.gradle
@@ -21,4 +21,5 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    provided 'org.projectlombok:lombok:1.12.6'
 }
